<resources>
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="order_btn">Order</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="type_your_name">Type your name</string>
</resources>
